# SolARModuleOpenGV

./: .gitignore  CMakeLists.txt  JenkinsFile  README.adoc  README.md  SolARModuleOpenGV.pri  SolARModuleOpenGV.pro  bcom-SolARModuleOpenGV.pc.in  doxyfile  packagedependencies-cmake.txt  packagedependencies.txt  packageignoreinstall.txt  xpcf_SolARModuleOpenGV_registry.xml
interfaces/: PoseEstimationEPnp.h  PoseEstimationP3PGao.h  PoseEstimationP3PKneip.h  PoseEstimationPnp.h  PoseEstimationSACEPnp.h  PoseEstimationSACP3PGao.h  PoseEstimationSACP3PKneip.h  PoseEstimationUPnp.h  SolARModuleOpengv_traits.h  SolAROpenGVHelper.h  SolAROpengvAPI.h  SolARPoseEstimationP3PKneip.h  SolARPoseEstimationPnpOpengv.h  SolARTriangulationOpengv.h  Triangulation.h
src/: PoseEstimationEPnp.cpp  PoseEstimationP3PGao.cpp  PoseEstimationP3PKneip.cpp  PoseEstimationPnp.cpp  PoseEstimationSACEPnp.cpp  PoseEstimationSACP3PGao.cpp  PoseEstimationSACP3PKneip.cpp  PoseEstimationUPnp.cpp  SolARModuleOpengv.cpp  SolAROpengvAPI.h  SolARPoseEstimationP3PKneip.cpp  SolARPoseEstimationPnpOpengv.cpp  SolARTriangulationOpengv.cpp  SolARTriangulationOpengv.h  Triangulation.cpp
tests/: README.adoc
tests/Data/: camera_calibration.yml
tests/SolARTestModuleOpenGVPnP/: CMakeLists.txt  SolAROpenGVPnP_conf.xml  SolARTestModuleOpenGVPnP.pro  conf_Pnp.xml  main.cpp  packagedependencies.txt
tests/SolARTestModuleOpenGVTriangulation/: CMakeLists.txt  SolAROpenGVTriangulation_conf.xml  SolARTestModuleOpenGVTriangulation.pro  conf_Triangulation.xml  main.cpp  packagedependencies-cmake.txt  packagedependencies.txt
tests/SolARTestTriangulation/: SolARTriangulationOpenGVTest.pro  conf_Triangulation.xml  main.cpp  packagedependencies.txt
tests/SolARTest_ModuleOpenGV_PnP/: SolARTest_ModuleOpenGV_PnP.pro  SolARTest_ModuleOpenGV_PnP_conf.xml  main.cpp  packagedependencies.txt
tests/SolARTest_ModuleOpenGV_Triangulation/: README.adoc  SolARTest_ModuleOpenGV_Triangulation.pro  SolARTest_ModuleOpenGV_Triangulation_conf.xml  main.cpp
tests/build-SolARTestModuleOpenGVPnP-Desktop_Qt_5_14_1_MSVC2017_64bit-Profile/: Makefile  Makefile.Debug  Makefile.Release
tests/build-SolARTestModuleOpenGVPnP-Desktop_Qt_5_14_2_MSVC2017_64bit-Profile/: Makefile  Makefile.Debug  Makefile.Release
tests/build-SolARTestModuleOpenGVTriangulation-Desktop_Qt_5_14_1_MSVC2017_64bit-Profile/: Makefile  Makefile.Debug  Makefile.Release
tests/build-SolARTestModuleOpenGVTriangulation-Desktop_Qt_5_14_2_MSVC2017_64bit-Profile/: Makefile  Makefile.Debug  Makefile.Release
tests/loadOpenGVModule/: conf_loading_test_opengv.xml  loadOpenGVModule.pro  main.cpp  packagedependencies.txt
tests/pnpWithOpenGV/: conf_Pnp.xml  main.cpp  packagedependencies.txt  pnpWithOpenGV.pro
tests/testOpenGVLink/: CMakeLists.txt  packagedependencies.txt  random_generators.cpp  testOpenGVLink.pro
